# shrimpl-language

./: .gitattributes  .gitignore  .replit  CHANGELOG.md  Cargo.toml  LICENSE  README.md  app.shr  dockerfile  replit.nix  shrimpl.db  shrimpl.pest
.github/workflows/: publish.yml
editors/jetbrains/: shrimpl-lsp.json
editors/nvim-shrimpl/: shrimpl.lua
editors/sublime/: LSP-shrimpl.sublime-settings  Shrimpl.sublime-settings
editors/vscode/: extension.ts  icon-theme.json  language-configuration.json  package.json  tsconfig.json
editors/vscode/syntaxes/: shrimpl.tmLanguage.json
src/: ast.rs  cache.rs  concurrency.rs  config.rs  docs.rs  format.rs  lib.rs  lint.rs  lockfile.rs  main.rs  metrics.rs  orm.rs  tests.rs  typecheck.rs
src/interpreter/: eval.rs  http.rs  mod.rs  openai.rs
src/parser/: ast.rs  expr.rs  mod.rs
src/shrimpl-lsp/: rename.rs
