[package]
name = "shrimpl"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.8"
pest_derive = "2.8"
logos = "0.13"
ureq = "2"
csv = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

# if you already had tokio from actix, just ensure "full" feature is on

[[bin]]
name = "shrimpl"
path = "src/main.rs"

[[bin]]
name = "shrimpl-lsp"
path = "src/bin/shrimpl_lsp.rs"
