[package]
name = "shrimpl"
version = "0.5.3.1"
edition = "2021"
license = "MIT"
description = "Shrimpl programming language and LSP"
repository = "https://github.com/Shrimpl-Language/shrimpl-language"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.8"
pest_derive = "2.8"
logos = "0.13"
ureq = "2"
csv = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
once_cell = "1.19"
# Enable `blocking` here so `reqwest::blocking::Client` compiles
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
thiserror = "1.0"

[[bin]]
name = "shrimpl"
path = "src/main.rs"

[[bin]]
name = "shrimpl-lsp"
path = "src/bin/shrimpl_lsp.rs"
