[package]
name = "shrimpl"
version = "0.5.5"
edition = "2021"
license = "MIT"
description = "Shrimpl programming language and LSP"
repository = "https://github.com/Shrimpl-Language/shrimpl-language"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.8"
pest_derive = "2.8"
logos = "0.13"
ureq = "2"
csv = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
once_cell = "1.19"
# Enable `blocking` here so `reqwest::blocking::Client` compiles
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2"

# Auth / validation / logging (safe, even if not fully wired everywhere yet)
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "9", default-features = false }
jsonschema = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# ORM + cache/concurrency utilities
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
futures = "0.3"

[[bin]]
name = "shrimpl"
path = "src/main.rs"

[[bin]]
name = "shrimpl-lsp"
path = "src/bin/shrimpl_lsp.rs"
